--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,12 +203,12 @@ install(PROGRAMS
   DESTINATION lib/${PROJECT_NAME}
 )
 
-# install(
-#   DIRECTORY
-#     launch
-#   DESTINATION
-#     share/${PROJECT_NAME}
-# )
+install(
+  DIRECTORY
+    launch rviz
+  DESTINATION
+    share/${PROJECT_NAME}
+)
 
 # Finalize the ament package
 ament_package()
